# devopss

./: Dockerfile  HTTP_Server.cpp  HTTP_Server.h  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  configure~  func.cpp  func.h  funcA.cpp  funcA.h  http_server  main  main.cpp  myprogram  program  scriptA.sh  scriptB.sh  test  test.cpp
.deps/: HTTP_Server.Po  main.Po
.github/workflows/: ci.yml  debian.yml  docker-multiarch.yml  dockerci.yml  httpci.yml
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
debian/: changelog  control  rules
tests/: test.cpp  test_program
tests/.deps/: test.Po
